--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,3 +1,4 @@
+<app-todo-search (searchItemEvent)="filteredTodos($event)" />
 <app-todo-add (createTodoEvent)="addTodoItem($event)" />
 <div class="todo-list">
   <app-todo-item
