--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,5 +3,6 @@
 <div class="todo-list">
   <app-todo-item
     *ngFor="let todo of todos" [item]="todo"
+    (changeStatusEvent)="changeTodoStatus($event)"
   />
 </div>
