upgrade: detele task for todo-item

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -14,4 +14,5 @@
     <option value="{{TodoStatus.Completed}}">Completed</option>
   </select>
   </label>
+  <button (click)="deleteTodoEvent.emit(item.id)">Delete</button>
 </div>
