--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -4,5 +4,6 @@
   <app-todo-item
     *ngFor="let todo of todos" [item]="todo"
     (changeStatusEvent)="changeTodoStatus($event)"
+    (deleteTodoEvent)="removeTodoItem($event)"
   />
 </div>
