--- a/src/app/pages/login/components/login-form/login-form.component.scss
+++ b/src/app/pages/login/components/login-form/login-form.component.scss
@@ -98,3 +98,9 @@ button:disabled {
     background-color: #2b6fe6;
   }
 }
+
+.error-message {
+  font-size: 18px;
+  text-align: center;
+  color: red;
+}
