--- a/src/app/pages/todos/components/todo-add/todo-add.component.html
+++ b/src/app/pages/todos/components/todo-add/todo-add.component.html
@@ -1,5 +1,5 @@
 <div class="todo-add">
-  <input type="text" [(ngModel)]="titleTask" />
+  <input type="text" [(ngModel)]="titleTask" placeholder="Enter title new task..."/>
   <select [(ngModel)]="statusTask" >
     <option value="{{TodoStatus.Normal}}">Normal</option>
     <option value="{{TodoStatus.Important}}">Important</option>
