--- a/src/app/pages/todos/components/todo-item/todo-item.component.html
+++ b/src/app/pages/todos/components/todo-item/todo-item.component.html
@@ -1,6 +1,6 @@
 <div class="todo-item">
-  <input type="checkbox"/>
-  <label class="todo-text">{{item.title}}
+  <input type="checkbox" [checked]="item.status === TodoStatus.Completed" />
+  <label class="todo-text" [ngClass]="{'label--completed': item.status === TodoStatus.Completed}">{{item.title}}
   <select [ngClass]="{
     'status--normal': item.status === TodoStatus.Normal,
     'status--important': item.status === TodoStatus.Important,
@@ -8,7 +8,8 @@
   }" (change)="changeStatusEvent.emit({
     id: item.id,
     status: item.status
-  })" [(ngModel)]="item.status" >
+  })" [(ngModel)]="item.status"
+  >
     <option value="{{TodoStatus.Normal}}" >Normal</option>
     <option value="{{TodoStatus.Important}}">Important</option>
     <option value="{{TodoStatus.Completed}}">Completed</option>
