--- a/src/app/pages/todos/components/todo-list/todo-list.component.html
+++ b/src/app/pages/todos/components/todo-list/todo-list.component.html
@@ -1,3 +1,4 @@
+<h2>Todo List</h2>
 <app-todo-search (searchItemEvent)="filteredTodos($event)" />
 <app-todo-add (createTodoEvent)="addTodoItem($event)" />
 <div class="todo-list" >
