--- a/src/app/pages/todos/components/todo-search/todo-search.component.html
+++ b/src/app/pages/todos/components/todo-search/todo-search.component.html
@@ -1,5 +1,5 @@
 <div>
-  <input type="text" [(ngModel)]="searchTitleItem" />
+  <input type="text" [(ngModel)]="searchTitleItem" placeholder="Enter search task title..."/>
   <select [(ngModel)]="filterStatusItem" >
     <option value="All">All</option>
     <option value="{{TodoStatus.Normal}}" >Normal</option>
