--- a/src/app/widgets/navbar/navbar.component.scss
+++ b/src/app/widgets/navbar/navbar.component.scss
@@ -1,10 +1,17 @@
 nav {
   display: flex;
+  width: 100vw;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 40px;
 
   color: #333333;
+
+  border-bottom: 1px solid #333333;
+  padding-bottom: 12px;
+  padding-top: 12px;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .active {
@@ -30,6 +37,7 @@ li {
 button {
   width: 120px;
   height: 36px;
+  margin-right: 40px;
   border-radius: 4px;
   background: none;
   border: 1px solid blue;
