--- a/src/app/pages/todos/components/todo-add/todo-add.component.scss
+++ b/src/app/pages/todos/components/todo-add/todo-add.component.scss
@@ -44,8 +44,17 @@ select {
   cursor: pointer;
 }
 
-div {
+form {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  &:hover {
+    background: white;
+    color: blue;
+  }
 }
