--- a/src/app/pages/todos/components/todo-item/todo-item.component.scss
+++ b/src/app/pages/todos/components/todo-item/todo-item.component.scss
@@ -21,3 +21,51 @@
 .label--completed {
   text-decoration: line-through;
 }
+
+label {
+  font-size: 18px;
+  display: inline-block;
+  width: 120px;
+  text-align: center;
+}
+
+input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+}
+
+.todo-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+}
+
+select {
+  margin-left: 10px;
+  padding: 0 12px;
+  min-height: 26px;
+  border: 1px solid blue;
+  border-radius: 5px;
+  background-color: white;
+  line-height: 1;
+  min-width: 140px;
+  transition: 0.2s ease-in;
+  outline: none;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button {
+  background: none;
+  border: 0.5px solid red;
+  padding: 6px 14px;
+  color: red;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+
+  &:hover {
+    background: red;
+    color: white;
+  }
+}
