--- a/src/app/pages/login/components/login-form/login-form.component.html
+++ b/src/app/pages/login/components/login-form/login-form.component.html
@@ -79,6 +79,6 @@
     Login
   </button>
 </form>
-<div *ngIf="error" class="error-message">
+<div *ngIf="loginForm.hasError('nameError')" class="error-message">
   Произошла ошибка авторизации
 </div>
