--- a/src/app/widgets/navbar/navbar.component.html
+++ b/src/app/widgets/navbar/navbar.component.html
@@ -14,6 +14,21 @@
         about
       </a>
     </li>
+    <li>
+      <a routerLink="/character" routerLinkActive="active">
+        StarWars Character
+      </a>
+    </li>
+    <li>
+      <a routerLink="/films" routerLinkActive="active">
+        StarWars Films
+      </a>
+    </li>
+    <li>
+      <a routerLink="/swapper" routerLinkActive="active">
+        Swapper
+      </a>
+    </li>
   </ul>
 
   <button
